fixed issue with landing page causing horizontal scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
-.App {
-  text-align: center;
+
+header {
+  display: flex;
+  padding: 20px 15px;
+}
+
+.App-link {
+  color: #09d3ac;
+}
+
+.app-nav {
+  position: relative;
+  z-index: 98;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 100%;
+  border: 1px red solid;
+}
+
+.app-nav a {
+  color: black;
+  text-decoration: none;
+  padding: 7px 20px;
+  font-weight: 300;
+  font-size: .9rem;
+}
+
+.app-nav .login-btn {
+  background: #C6E478;
+  padding: 7px 25px;
+  border-radius: 5px;
+}
+
+.logo {
+  position: relative;
+  z-index: 98;
+  margin: 0;
+  padding: 0;
 }
